2017-02-02 Fixed static header and footer with outstretch height and in fit to window and full screen modes
2017-02-02 Added Works with property in Page Progress module
2017-02-02 Added show/hide commands in Writing Calculations module
2017-02-02 Added enable/disable button/command in eKeyboard. Fixed changing focus by eKeyboard. Fixed open command in eKeyboard. Changed Esc button action in eKeyboard. Updated jquery.keyboard.min.js.
2017-01-31 Added setting text parser in Table module
2017-01-24 Added events for drawing commands in Grid Scene module
2017-01-24 Fixed problems on iPad in Paragraph module
2017-01-24 Fixed saving changes in Choice module
2017-01-16 Fixed display bug in animation module on android 5.1.1 and 5.0.2
2017-01-16 Fixed isVisible property on Safari in Iframe module
2017-01-11 Added Enable pages property in Hierarchical Lesson Report module
2017-01-11 Fixed problem with updating additional styles and displaying pages in Navigation Bar module
2017-01-04 Fixed rendering LaTeX afetr showing answers in Math module
2016-12-29 Fixed issue with doubled events in Table module
2016-12-29 Fixed saving state of drawings in IWB Toolbar
2016-12-22 Added Animated gif refresh property in Layered Image module
2016-12-20 Fixed counting score after showing answers in Math module
2016-12-19 Fixed counting score after showing answers in Writing Calculation module
2016-12-14 Removed random values from report when stylus is of in LearnPen Report module
2016-12-12 Added Open external link in property in Glossary module
2016-12-01 Added confirmation box in Reset module
2016-12-01 Added refreshing animated gifs in Image module
2016-12-01 Fixed problems with coloring ans saving state in Text Coloring module
2016-11-24 Fixed problem with dragging in Clock addon.
2016-11-24 Added multiple answers in filled gap.
2016-11-23 Added outstretch height command to player controller
2016-11-22 Added looping in Video module