@@ -1331,7 +1331,7 @@
 	"SVG2_property_skip_aspect_ration": "Pomiń współczynnik proporcji",
 	"eKeyboard_info" : "Wirtualna klawiatura, która pojawia się na ekranie po zaznaczeniu obszaru tekstowego współpracującego z Addonem.",
 	"eKeyboard_name" : "e-Klawiatura",
-        "eKeyboard_property_work_with": "Działa z",
+	"eKeyboard_property_work_with": "Działa z",
 	"eKeyboard_property_layout_type": "Typ układu",
 	"eKeyboard_property_custom_layout": "Układ domyślny",
 	"eKeyboard_property_position_my": "Pozycja \"My\"",
@@ -1340,6 +1340,7 @@
 	"eKeyboard_property_no_open_on_focus": "Nie otwieraj automatycznie",
 	"eKeyboard_property_lock_standard_keyboard_input": "Zablokuj standardową klawiaturę",
 	"eKeyboard_property_custom_display": "Niestandardowe wyświetlanie",
+	"eKeyboard_property_show_close_button": "Show Close Button",
 	"LearnPen_info" : "Umożliwia rysowanie obrazów na ekranie prezentacji z wykorzystaniem modułu LearnPen.",
 	"LearnPen_name" : "Rysowanie z LearnPen",
 	"LearnPen_property_smart_pen": "LearnPen",
