@@ -1,3 +1,4 @@
+2017-02-06 Updated ekeyboard labels in dictionaries.
 2017-02-02 Fixed static header and footer with outstretch height and in fit to window and full screen modes
 2017-02-02 Added Works with property in Page Progress module
 2017-02-02 Added show/hide commands in Writing Calculations module
